# lf-zephyr-uc-template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  env.sh  west.yml
.github/actions/run-tests/: action.yml
.github/scripts/: run-all.sh
.github/workflows/: ci.yml
HelloWorld/src/: HelloWorld.lf
NrfBlinky/: main.c
run/: build.sh  emulate.sh
scripts/: clean.py  gen_fed_template.py  west-commands.yml
src/: Blinky.ulf  HelloFed.lf  HelloWorld.lf  HelloWorld.ulf
